test/sema/methods/self_type_outside_struct_local_var.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:10: error: 'Self' is only allowed inside structs
  let x: Self;
}
